pipelines/build-pipeline/webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: reversewords-webhook
  name: reversewords-webhook
  namespace: reversewords-ci
spec:
  host: reversewords-webhook-reversewords-ci.apps.am-week-test.okd.endava-test-domain.be
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: el-reversewords-webhook
    weight: 100
  wildcardPolicy: None
